--- a/mvcEx/src/main/resources/templates/join.html
+++ b/mvcEx/src/main/resources/templates/join.html
@@ -19,13 +19,13 @@
   
     <div class="input-group mb-3">
 	  <span class="input-group-text w90" id="basic-addon1">성 명</span>
-	  <input type="text" class="form-control" name="username" 
+	  <input type="text" class="form-control" name="userid" 
 	  		 placeholder="성명을 입력하세요." >
 	  <span id="usernameMsg"></span>		 
 	</div>
     <div class="input-group mb-3">
 	  <span class="input-group-text w90" id="basic-addon2"> 아 이 디</span>
-	  <input type="text" class="form-control" name="userid"  
+	  <input type="text" class="form-control" name="username"  
 	  	     placeholder="아이디를 입력하세요." >
       <span id="useridMsg" ></span>	  	     
 	</div>
@@ -37,14 +37,19 @@
 	</div>
 	<div class="input-group mb-3">
 	  <span class="input-group-text" id="basic-addon4">나이</span>
-	  <input type="number" class="form-control" name="age" 
+	  <input type="text" class="form-control" name="birth" 
 	  	     placeholder="나이를 입력하세요." >
 	  <span></span>
 	</div>
-	
+	<div class="input-group mb-3">
+	  <span class="input-group-text w90" id="basic-addon6"> 성별 </span>
+	  <input type="gender" class="form-control" name="gender" 
+	  		 placeholder="성별을 입력하세요." >
+	  <span></span>
+	</div>
 
 	<div class="input-group mb-3">
-	  <span class="input-group-text w90" id="basic-addon6">이메일 </span>
+	  <span class="input-group-text w90" id="basic-addon6"> 이메일 </span>
 	  <input type="email" class="form-control" name="email" 
 	  		 placeholder="이메일을 입력하세요." >
 	  <span></span>
