--- a/board/src/main/resources/templates/community/read.html
+++ b/board/src/main/resources/templates/community/read.html
@@ -5,6 +5,15 @@
 <title>커뮤니티 게시판 연습</title>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+ <style type="text/css">
+ 	.container{
+ 	width:750px;
+ 	}
+ 	i {
+ 		cursor:pointer;
+ 	}
+ </style>
 </head>
 <body>
 	<div class="container">
@@ -78,8 +87,39 @@
 	                    </div>
 	            </div>
 	        </div>
+	        <hr/>
+	        <h4>댓글<span class="badge" style="background-color: #bebebf;color:#6f42c1;font-size:0.7rem;">
+                            	[[${dto.commentCount}]]</span></h4>
+        <div class="row mt-3">
+            <div id="errMsg" style="color: red; font-size: 0.85em;"></div>
+            <div class="row">
+                <input type="text" id="writer" th:value="${session.username}">
+                <input type="hidden" id="mref" th:value="${dto.idx}">
+                <div class="input-group mb-3">
+                    <textarea class="form-control" rows="4" id="content"></textarea>
+                    <button type="button" class="btn btn-outline-secondary" id="btnSave">
+                        저장</button>
+                </div>
+            </div>
+            <hr/>
+            <!-- 이 글의 idx 로 조회한 댓글 목록이 출력됩니다.-->
+            <ul class="list-group myfs-9" id="replyList">
+      <li class="list-group-item d-flex">
+                     <span class="col-5 myfc-1">${dto.writer}</span>
+                     <span class="col-6">${dto.createdAt}</span>
+                     <span class="col-1">
+                     <!-- 삭제 아이콘 -->
+                         <i class="bi bi-trash3-fill" data-num="${dto.idx}"></i>
+                    </span>
+                </li>
+                <li class="list-group-item d-flex">
+                 <textarea class="form-control myfs-9" disabled>${dto.content}</textarea>
+               </li>
+            </ul>
+        </div>
 	    </div>
 	</div>
 	</div>
+	<script type="text/javascript" src="/js/comments.js"></script>
 </body>
 </html>
